# git-analyzer

./: .gitignore  README.md  git-analyzer.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
amarula/: config.ini
src/: article_generator.py  config_parser.py  git_utils.py  openai_utils.py
